force-app/main/default/objects/Embryos__c/Embryos__c.object-meta.xml
<CustomObject>
    <label>Embryo</label>
    <nameField>
        <label>Embryo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Embryos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>