force-app/main/default/objects/Embryos__c/fields/Age_at_Embryo_Creation__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Embryo_Creation__c</fullName>
    <label>Age at Embryo Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>