force-app/main/default/objects/Embryos__c/fields/Biopsy_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Biopsy_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biopsy Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>