force-app/main/default/objects/Embryos__c/fields/Cell_Wash_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Cell_Wash_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cell Wash Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Embryos1</relationshipName>
    <type>Lookup</type>
</CustomField>