force-app/main/default/objects/Embryos__c/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumed</label>
    <type>Checkbox</type>
</CustomField>