force-app/main/default/objects/Embryos__c/fields/Cycle_Created_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Created_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Created In</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>