force-app/main/default/objects/Embryos__c/fields/Cycle_Thawed_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Thawed_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Thawed In</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Embryos (Cycle Thawed In)</relationshipLabel>
    <relationshipName>Embryos2</relationshipName>
    <type>Lookup</type>
</CustomField>