force-app/main/default/objects/Embryos__c/fields/Cycle_Transferred_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Transferred_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Transferred In</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Embryos (Cycle Transferred In)</relationshipLabel>
    <relationshipName>Embryos1</relationshipName>
    <type>Lookup</type>
</CustomField>