force-app/main/default/objects/Embryos__c/fields/Day_2_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Consolidated__c</fullName>
    <formula>TEXT(Day_2_Cell_Number__c) &amp;&quot; &quot;&amp; TEXT( Day_2_Points__c ) &amp;&quot; &quot;&amp; TEXT(Day_2_Fragmentation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 2 Consolidated</label>
    <type>Text</type>
</CustomField>