force-app/main/default/objects/Embryos__c/fields/Day_2_Points__c.field-meta.xml
<CustomField>
    <fullName>Day_2_Points__c</fullName>
    <label>Day 2 Points</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Day_2_4_Points</valueSetName>
    </valueSet>
</CustomField>