force-app/main/default/objects/Embryos__c/fields/Day_3_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Consolidated__c</fullName>
    <formula>TEXT(Day_3_Cell_Number__c) &amp;&quot; &quot;&amp;  TEXT (Day_3_Points__c)&amp;&quot; &quot;&amp;  TEXT(Day_3_Fragmentation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 3 Consolidated</label>
    <type>Text</type>
</CustomField>