force-app/main/default/objects/Embryos__c/fields/Day_3_Fragmentation__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Fragmentation__c</fullName>
    <label>Day 3 Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Day_2_4_Fragmentation</valueSetName>
    </valueSet>
</CustomField>