force-app/main/default/objects/Embryos__c/fields/Day_4_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_4_Cell_Number__c</fullName>
    <label>Day 4 Cell Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Day_2_4_Cell_Number</valueSetName>
    </valueSet>
</CustomField>