force-app/main/default/objects/Embryos__c/fields/Day_4_Consolidated__c.field-meta.xml
<CustomField>
    <fullName>Day_4_Consolidated__c</fullName>
    <formula>TEXT(Day_4_Cell_Number__c) &amp;&quot; &quot;&amp; TEXT(Day_4_Grade__c )&amp;&quot; &quot;&amp; TEXT( Day_4_Points__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 4 Consolidated</label>
    <type>Text</type>
</CustomField>