force-app/main/default/objects/Embryos__c/fields/Day_5_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Consolidated_Grade__c</fullName>
    <formula>TEXT (Day_5_Overall_Grade__c)&amp;&quot; &quot;&amp;TEXT(Day_5_ICM_Trophectoderm__c) &amp;&quot; &quot;&amp; TEXT(Day_5_Trifecdetderm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 5 Consolidated Grade</label>
    <type>Text</type>
</CustomField>