force-app/main/default/objects/Embryos__c/fields/Day_5_Trifecdetderm__c.field-meta.xml
<CustomField>
    <fullName>Day_5_Trifecdetderm__c</fullName>
    <label>Day 5 Trophectoderm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Day_5_7_ICM_Trophectoderm</valueSetName>
    </valueSet>
</CustomField>