force-app/main/default/objects/Embryos__c/fields/Day_6_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_6_Consolidated_Grade__c</fullName>
    <formula>TEXT (Day_6_Overall_Grade__c)&amp;&quot; &quot;&amp;TEXT(  Day_6_ICM_Trophectoderm__c ) &amp;&quot; &quot;&amp; TEXT( Day_6_Trophectoderm__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 6 Consolidated Grade</label>
    <type>Text</type>
</CustomField>