force-app/main/default/objects/Embryos__c/fields/Day_7_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Day_7_Consolidated_Grade__c</fullName>
    <formula>TEXT( Day_7_Overall_Grade__c ) &amp;&quot; &quot;&amp; TEXT(Day_7_ICM_Trophectoderm__c) &amp;&quot; &quot;&amp; TEXT (Day_7_Trophectoderm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day 7 Consolidated Grade</label>
    <type>Text</type>
</CustomField>