force-app/main/default/objects/Embryos__c/fields/Day_7_ICM_Trophectoderm__c.field-meta.xml
<CustomField>
    <fullName>Day_7_ICM_Trophectoderm__c</fullName>
    <label>Day 7 ICM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Embryo_Day_5_7_ICM_Trophectoderm</valueSetName>
    </valueSet>
</CustomField>