force-app/main/default/objects/Embryos__c/fields/Embryo_Batch_Storage_Date__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Batch_Storage_Date__c</fullName>
    <formula>Embryo_Batch__r.Storage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embryo Batch Storage Date</label>
    <type>Date</type>
</CustomField>