force-app/main/default/objects/Embryos__c/fields/Embryo_Number__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Number__c</fullName>
    <label>Embryo Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>