force-app/main/default/objects/Embryos__c/fields/Exported_Date__c.field-meta.xml
<CustomField>
    <fullName>Exported_Date__c</fullName>
    <label>Exported Date</label>
    <type>Date</type>
</CustomField>