force-app/main/default/objects/Embryos__c/fields/Fate__c.field-meta.xml
<CustomField>
    <fullName>Fate__c</fullName>
    <label>Fate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Not Viable</fullName>
            </value>
            <value>
                <fullName>Awaiting PGT Results</fullName>
            </value>
            <value>
                <fullName>For Freeze</fullName>
            </value>
            <value>
                <fullName>For Transfer</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Awaiting Disposal</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Exported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>