force-app/main/default/objects/Embryos__c/fields/Fertilisation_Status__c.field-meta.xml
<CustomField>
    <fullName>Fertilisation_Status__c</fullName>
    <label>Fertilisation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2PN</fullName>
            </value>
            <value>
                <fullName>NF</fullName>
            </value>
            <value>
                <fullName>NF –&gt; 2PN</fullName>
            </value>
            <value>
                <fullName>3PN</fullName>
            </value>
            <value>
                <fullName>1PN</fullName>
            </value>
            <value>
                <fullName>DEG</fullName>
            </value>
            <value>
                <fullName>4+PN</fullName>
            </value>
            <value>
                <fullName>EZ</fullName>
            </value>
            <value>
                <fullName>OoZ</fullName>
            </value>
            <value>
                <fullName>Giant</fullName>
            </value>
            <value>
                <fullName>0PN 0PB (MI)</fullName>
                <isActive>false</isActive>
                <label>0PN 0PB (MI)</label>
            </value>
            <value>
                <fullName>0PN 1PB (MII)</fullName>
                <isActive>false</isActive>
                <label>0PN 1PB (MII)</label>
            </value>
            <value>
                <fullName>0PN 2PB</fullName>
                <isActive>false</isActive>
                <label>0PN 2PB</label>
            </value>
            <value>
                <fullName>&gt;3PN</fullName>
                <isActive>false</isActive>
                <label>&gt;3PN</label>
            </value>
            <value>
                <fullName>GV</fullName>
                <isActive>false</isActive>
                <label>GV</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <isActive>false</isActive>
                <label>OTHER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>