force-app/main/default/objects/Embryos__c/fields/Freeze_Media__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Media__c</fullName>
    <label>Freeze Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vitrolife RapidVitBlast</fullName>
            </value>
            <value>
                <fullName>Vitrolife RapidVitCleave</fullName>
            </value>
            <value>
                <fullName>SageVitKit</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>Cook Vitrification Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>