force-app/main/default/objects/Embryos__c/fields/Insem_Method__c.field-meta.xml
<CustomField>
    <fullName>Insem_Method__c</fullName>
    <label>Insem Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insemination_Method</valueSetName>
    </valueSet>
</CustomField>