force-app/main/default/objects/Embryos__c/fields/LAH__c.field-meta.xml
<CustomField>
    <fullName>LAH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LAH</label>
    <type>Checkbox</type>
</CustomField>