force-app/main/default/objects/Embryos__c/fields/Most_Recent_Consolidated_Grade__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Consolidated_Grade__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Day_7_Consolidated_Grade__c)),
    Day_7_Consolidated_Grade__c,
    IF(
        NOT(ISBLANK(Day_6_Consolidated_Grade__c)),
        Day_6_Consolidated_Grade__c,
        IF(
            NOT(ISBLANK(Day_5_Consolidated_Grade__c)),
            Day_5_Consolidated_Grade__c,
            NULL
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Consolidated Grade</label>
    <type>Text</type>
</CustomField>