force-app/main/default/objects/Embryos__c/fields/Name_of_Egg_Provider__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Egg_Provider__c</fullName>
    <formula>Related_Egg__r.Egg_Cohort__r.Patient_Donor__r.FirstName  &amp;&quot; &quot;&amp;  Related_Egg__r.Egg_Cohort__r.Patient_Donor__r.LastName  &amp;&quot; &quot;&amp;Related_Egg__r.Egg_Cohort__r.Patient_Donor__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Egg Provider</label>
    <type>Text</type>
</CustomField>