force-app/main/default/objects/Embryos__c/fields/Name_of_Sperm_Provider__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Sperm_Provider__c</fullName>
    <formula>Semen_Sample__r.Patient_Donor__r.FirstName &amp;&quot; &quot;&amp; Semen_Sample__r.Patient_Donor__r.LastName &amp;&quot; &quot;&amp; Semen_Sample__r.Patient_Donor__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Sperm Provider</label>
    <type>Text</type>
</CustomField>