force-app/main/default/objects/Embryos__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Embryo_Batch__r.Patient_Donor__r.FirstName &amp;&quot; &quot;&amp; Embryo_Batch__r.Patient_Donor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>