force-app/main/default/objects/Embryos__c/fields/PGT_Notes__c.field-meta.xml
<CustomField>
    <fullName>PGT_Notes__c</fullName>
    <label>PGT Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>