force-app/main/default/objects/Embryos__c/fields/PGT_Results__c.field-meta.xml
<CustomField>
    <fullName>PGT_Results__c</fullName>
    <label>PGT Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euploid</fullName>
            </value>
            <value>
                <fullName>Aneuploid</fullName>
            </value>
            <value>
                <fullName>Mosaic</fullName>
            </value>
            <value>
                <fullName>No DNA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Abnormal</fullName>
            </value>
            <value>
                <fullName>Monogenic</fullName>
                <isActive>false</isActive>
                <label>Monogenic</label>
            </value>
            <value>
                <fullName>New Result</fullName>
                <isActive>false</isActive>
                <label>New Result</label>
            </value>
            <value>
                <fullName>Translocation</fullName>
                <isActive>false</isActive>
                <label>Translocation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>