force-app/main/default/objects/Embryos__c/fields/Post_Thaw_Day_5_Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Day_5_Cell_Number__c</fullName>
    <label>Post Thaw Cell Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1c</fullName>
            </value>
            <value>
                <fullName>2c</fullName>
            </value>
            <value>
                <fullName>3c</fullName>
            </value>
            <value>
                <fullName>4c</fullName>
            </value>
            <value>
                <fullName>5c</fullName>
            </value>
            <value>
                <fullName>6c</fullName>
            </value>
            <value>
                <fullName>7c</fullName>
            </value>
            <value>
                <fullName>8c</fullName>
            </value>
            <value>
                <fullName>9c</fullName>
            </value>
            <value>
                <fullName>10c</fullName>
            </value>
            <value>
                <fullName>11c</fullName>
            </value>
            <value>
                <fullName>12c</fullName>
            </value>
            <value>
                <fullName>13c</fullName>
            </value>
            <value>
                <fullName>14c</fullName>
            </value>
            <value>
                <fullName>15c</fullName>
            </value>
            <value>
                <fullName>16c</fullName>
            </value>
            <value>
                <fullName>16+</fullName>
            </value>
            <value>
                <fullName>Part Compacting</fullName>
            </value>
            <value>
                <fullName>Compacting</fullName>
            </value>
            <value>
                <fullName>Morula</fullName>
            </value>
            <value>
                <fullName>1ec</fullName>
            </value>
            <value>
                <fullName>1eb</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>