force-app/main/default/objects/Embryos__c/fields/Post_Thaw_Day_5_Grade__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Day_5_Grade__c</fullName>
    <label>Post Thaw Day 5 Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>