force-app/main/default/objects/Embryos__c/fields/Post_Thaw_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Expansion__c</fullName>
    <label>Post Thaw Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleavage</fullName>
            </value>
            <value>
                <fullName>Compacting</fullName>
            </value>
            <value>
                <fullName>Morula</fullName>
            </value>
            <value>
                <fullName>Degenerate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Early blastocyst</fullName>
            </value>
            <value>
                <fullName>Blastocyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>