force-app/main/default/objects/Embryos__c/fields/Post_Thaw_Other__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Other__c</fullName>
    <label>Post Thaw Expansion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully expanded</fullName>
            </value>
            <value>
                <fullName>Partially expanded</fullName>
            </value>
            <value>
                <fullName>No expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>