force-app/main/default/objects/Embryos__c/fields/Post_Thaw_Survival__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Survival__c</fullName>
    <label>Post Thaw Survival</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>80% - 99%</fullName>
            </value>
            <value>
                <fullName>50% - 79%</fullName>
            </value>
            <value>
                <fullName>0% - 49%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>