force-app/main/default/objects/Embryos__c/fields/Pregnancy_Outcome_Cycle_Transferred_in__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Outcome_Cycle_Transferred_in__c</fullName>
    <formula>TEXT(Cycle_Transferred_In__r.Pregnancy_Outcome__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pregnancy Outcome Cycle Transferred in</label>
    <type>Text</type>
</CustomField>