force-app/main/default/objects/Embryos__c/fields/Related_Egg__c.field-meta.xml
<CustomField>
    <fullName>Related_Egg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Egg</label>
    <referenceTo>Egg__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>