force-app/main/default/objects/Embryos__c/fields/Slow_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Slow_Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slow Frozen</label>
    <type>Checkbox</type>
</CustomField>